--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,6 @@ services:
     container_name: kuli
     image: ghcr.io/artistudioxyz/kuli:latest
     build: .
+    volumes:
+      - /home/ubuntu:/home/ubuntu
     restart: always
